<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_pin"
        tools:context=".ui.pin.PinActivity">

    <android.support.design.widget.TextInputLayout
            android:id="@+id/pinInputContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PIN code"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" app:passwordToggleEnabled="false">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/pinInputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:inputType="numberPassword"/>

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
